# msitools

./: .gitignore  .gitmodules  meson.build
.github/workflows/: build.yml  release.yml
libxml/: xmlversion.h
msi-interop/: NOT_IMPLEMENTED.md  database.c  file_utils.c  handle_table.c  handle_table.h  msi_cab.c  msi_cab.h  msi_interop.h  query.c  record.c  string_utils.c  string_utils.h  stubs.c  summary.c
scripts/: build.sh  setup-msys2.sh
tests/: minimal.wxs
vapi/: libgcab-1.0.vapi  libmsi-1.0.vapi
